# automated-timetable-system-backend

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: c64030bad7fb_initial_schema.py
app/: database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: auth.py  constraints.py  lecturer.py  resources.py  scheduler.py  student.py  timetable.py
app/scheduler/: model.py  solver.py  validator.py
